force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/CMN_Account_Contact_Relationship_Detail__c.object-meta.xml
<CustomObject>
    <label>CMN Account Contact Relationship Detail</label>
    <nameField>
        <displayFormat>ACR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMN Account Contact Relationship Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>