force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CMN Account Contact Relationship Details</relationshipLabel>
    <relationshipName>CMN_Account_Contact_Relationship_Details</relationshipName>
    <type>Lookup</type>
</CustomField>