force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CMN Account Contact Relationship Details</relationshipLabel>
    <relationshipName>CMN_Account_Contact_Relationship_Details</relationshipName>
    <type>Lookup</type>
</CustomField>