force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/ExternalCountry__c.field-meta.xml
<CustomField>
    <fullName>ExternalCountry__c</fullName>
    <description>SFP-10768 [1] - A 2-digit country code that identifies the country of origin for this record</description>
    <label>ExternalCountry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExternalCIFCountry</valueSetName>
    </valueSet>
</CustomField>