force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>SFP-10768 [1] A unique Id from the external system that identifies the corresponding record in that system</description>
    <label>ExternalId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>