force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/ExternalIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdentifier__c</fullName>
    <description>SFP-10768 [s] A unique key made up from the External Country + External System Id and External Id that identifies the origin of this record. (Eg ZA01123456789 is a record from South Africa (ZA) and SAP (01) with Id 123456789)</description>
    <externalId>true</externalId>
    <label>External Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>