force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/ExternalSystemId__c.field-meta.xml
<CustomField>
    <fullName>ExternalSystemId__c</fullName>
    <description>SFP-10768 [1] 2-number code that identifies the specific system that contains the master copy of this record.</description>
    <label>External System Id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>