force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <description>SFP-10199 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template</description>
    <inlineHelpText>The percentage ownership of the shareholder</inlineHelpText>
    <label>Ownership %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>