force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCOUNTING OFFICER</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATOR</fullName>
            </value>
            <value>
                <fullName>AGENT</fullName>
            </value>
            <value>
                <fullName>AUDITOR GENERAL</fullName>
            </value>
            <value>
                <fullName>BENEFICIAL OWNER</fullName>
                <label>Beneficial Owner</label>
            </value>
            <value>
                <fullName>BENEFICIARY</fullName>
            </value>
            <value>
                <fullName>BOARD MEMBER</fullName>
            </value>
            <value>
                <fullName>BUSINESS CONTROLLER</fullName>
            </value>
            <value>
                <fullName>BUSINESS REPRESENTATIVE</fullName>
            </value>
            <value>
                <fullName>BUSINESS RESCUE PRACTITIONER</fullName>
            </value>
            <value>
                <fullName>Business User</fullName>
            </value>
            <value>
                <fullName>CHAIRMAN</fullName>
            </value>
            <value>
                <fullName>CHAIRPERSON</fullName>
            </value>
            <value>
                <fullName>CHAIRPERSON OF THE COUNCIL</fullName>
            </value>
            <value>
                <fullName>CHANCELLOR</fullName>
            </value>
            <value>
                <fullName>CHIEF EXECUTIVE OFFICER</fullName>
            </value>
            <value>
                <fullName>CHIEF FINANCIAL OFFICER</fullName>
            </value>
            <value>
                <fullName>CHIEF OPERATIONS</fullName>
            </value>
            <value>
                <fullName>COMPANY DIRECTOR</fullName>
            </value>
            <value>
                <fullName>COMPANY SECRETARY</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
                <isActive>false</isActive>
                <label>Contact</label>
            </value>
            <value>
                <fullName>CONTACT PERSON</fullName>
            </value>
            <value>
                <fullName>CONTROLLING ENTITY</fullName>
            </value>
            <value>
                <fullName>CO-PARTICIPANT</fullName>
            </value>
            <value>
                <fullName>CorpRep</fullName>
                <isActive>false</isActive>
                <label>CorpRep</label>
            </value>
            <value>
                <fullName>COUNCILLOR</fullName>
            </value>
            <value>
                <fullName>CURATOR</fullName>
            </value>
            <value>
                <fullName>DEBT COUNSELLOR</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>DEPUTY CHAIRPERSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>