force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/validationRules/cannot_be_active_with_expired_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_be_active_with_expired_dates</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND( Valid_To__c &lt; TODAY(),  ISPICKVAL( Status__c , &apos;Active&apos;) ), true, false)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be active within expired dates interval</errorMessage>
</ValidationRule>