force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/validationRules/cannot_be_expired_with_active_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_be_expired_with_active_dates</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND( Valid_To__c &gt; TODAY(),  ISPICKVAL( Status__c , &apos;Expired&apos;) ), true, false)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be expired within active dates interval</errorMessage>
</ValidationRule>