force-app/main/default/objects/CMN_Account_Contact_Relationship_Detail__c/validationRules/End_date_not_less_that_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_not_less_that_start_date</fullName>
    <active>false</active>
    <errorConditionFormula>IF( Valid_To__c &lt; Valid_From__c , true, false)</errorConditionFormula>
    <errorDisplayField>Valid_To__c</errorDisplayField>
    <errorMessage>Valid to cannot be less than valid from</errorMessage>
</ValidationRule>